Please view this file on the master branch, on stable branches it's out of date.

v 0.0.1 (unreleased)
* Move generation of SECRET_KEY_TOKEN to an initializer (jvanbaarsen)
* Brand new design (jvanbaarsen)
* Scope app name uniqueness to server and not entire IC (jvanbaarsen)
* Make sure service containers are destroyed when removing an app Fixes: #80 (jvanbaarsen)
* Schedule Health_checks in their own queue and run them in IC. (jvanbaarsen)
* Add ability to remove users from the IC (brambokdam)
* Add blank slate for server page (jvanbaarsen)
* Add Two Factor Authentication (jvanbaarsen)
* Add a LICENSE file (jvanbaarsen)
* Load gravatars over SSL (jvanbaarsen)
* Ensure Healthcheck page has proper styling (jvanbaarsen)
* Don't schedule backups when the server is marked as down (jvanbaarsen)
* Add pagination to the backups page (jvanbaarsen)
* Update to Dokku 0.7.0; Fixes: #158 (jvanbaarsen)
* Remove the empty state on different forms after adding first item; Fixes: #156 (jvanbaarsen)
* Added a settings page (jvanbaarsen)
* FROM_EMAIL env var is deprecated. Set the from_emails on the setting page (jvanbaarsen)
* Make SMTP configurable in the IC interface (jvanbaarsen)
* Remember a login for 30 days (jvanbaarsen)