@@ -5,6 +5,7 @@
       <li><%= link_to "Server".html_safe, server_apps_path(app.server) %></li>
       <li class="<%= "is-active" if tab == "info" %>"><%= link_to "Info", server_app_path(app.server, app) %></li>
       <li class="<%= "is-active" if tab == "domains" %>"><%= link_to "Domains", server_app_domains_path(app.server, app) %></li>
+      <li class="<%= "is-active" if tab == "certificate" %>"><%= link_to "SSL", server_app_certificate_path(app.server, app) %></li>
       <li class="<%= "is-active" if tab == "services" %>"><%= link_to "Linked services", server_app_services_path(app.server, app) %></li>
       <li class="<%= "is-active" if tab == "env_vars" %>"><%= link_to "Environment vars", server_app_env_vars_path(app.server, app) %></li>
       <li class="<%= "is-active" if tab == "backups" %>"><%= link_to "Backups", server_app_backups_path(app.server, app) %></li>
