@@ -1,0 +1,19 @@
+-----BEGIN CERTIFICATE-----
+MIIDCzCCAfOgAwIBAgIJAMkxwMYMNrqZMA0GCSqGSIb3DQEBBQUAMBwxGjAYBgNV
+BAMMEWRva2t1LmV4YW1wbGUuY29tMB4XDTE2MDgzMDExNDMwMVoXDTI2MDgyODEx
+NDMwMVowHDEaMBgGA1UEAwwRZG9ra3UuZXhhbXBsZS5jb20wggEiMA0GCSqGSIb3
+DQEBAQUAA4IBDwAwggEKAoIBAQCVSXsVDzRXTPrFVDJJejpUdTUQP6l7jziHU0az
+enzUmxX05d+ywVLy2ihFqrRfI8CtnXM8byrkrnjGj9Lb4UiGLNA84NVweUrcI9xU
+5PxVDYI71HWXSTeSCXA7N1lcMLFe1wkzpjeHDiWYaj9YtdkOYBT/h/SguLLHxD3n
+ZatJdRXgmvaZ1og0T4aC96xiwuSNbCr+6y7plGaQLK3V8rtS8H+aKraDKw2Sew6T
+aDDfvFfwJooYZVk56DxNbNzI2wZgsj/abgFNu3TjOcP1JJtePww+Cc1/OFlgw97n
+wIGDQ/xVGmAGJ3mbCX7Lg9Wom3OgxoOYB03jwPen5XCyJ1Y9AgMBAAGjUDBOMB0G
+A1UdDgQWBBQQDQJj806DjC7kN2C/zBOY9ifc6jAfBgNVHSMEGDAWgBQQDQJj806D
+jC7kN2C/zBOY9ifc6jAMBgNVHRMEBTADAQH/MA0GCSqGSIb3DQEBBQUAA4IBAQCP
+MR8JmC52wolYiyV1JiAf5EhmgbbVSZT2s/+VoV0BncvWoq41+UUO4ngyGcUPP/j/
+rRp7EkK+rt6esOvnbCpWgD8nCEjSUXdV+X1epc9EBZv0mA3tHLxt1mZ2ea12opBw
+roYL/beVjWV6d3TJjuxRO2u/+X0vvu2h+lFE/YyYe0Nyg+2zG0MBU7m+tI8I2Jpd
+Rx1j3a8/uoClL+NcRDiL6XnxNCMqn8ZR50FodUdhSBoYN1ABcQhei4swJSPPNniH
++OdUd3rr+pJTQailiAdRtCd5lXHKxpDHyks4YNNCW9NYOiav1B/mZ3cfsEK6pLS8
+GG9Z4pte0ALvd80dRX2e
+-----END CERTIFICATE-----
